--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ body {
 }
 
 .common-btn {
-  @apply bg-primary hover:bg-hover text-white font-bold py-1 rounded-md text-base block transition-all;
+  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base block transition-all;
 }
 
 .common-title {
