feat: 모달 컴포넌트 교체 가능 +모달 레이아웃과 디자인 다듬음

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,3 +98,14 @@ body {
 .common-title {
   @apply text-2xl text-primary my-5 font-bold text-center md:my-8 md:text-4xl;
 }
+
+.hide-scroll-y {
+  overflow-y: scroll;
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
