feat: step2 부터 step5까지 기능 구현 완료, step6는 받은 데이터 확인용 + progressIndicator 생성

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,11 @@ body {
 }
 
 .common-btn {
-  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base block transition-all;
+  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base inline-flex justify-center items-center transition-all;
+}
+
+.common-btn:disabled {
+  @apply bg-gray-300 cursor-not-allowed hover:bg-gray-300;
 }
 
 .common-title {
