--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,10 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+display: none;
 }
 
 @layer utilities {
@@ -92,7 +96,7 @@ body {
 }
 
 .common-btn {
-  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base inline-flex justify-center items-center transition-all;
+  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base transition-all;
 }
 
 .common-btn:disabled {
