--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -92,7 +92,7 @@ body {
 }
 
 .common-btn {
-  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base inline-flex justify-center items-center transition-all;
+  @apply bg-primary hover:bg-hover text-white font-bold rounded-md text-base transition-all;
 }
 
 .common-btn:disabled {
